# hiage-original

./: .gitignore  .gitmodules  CMakeLists.txt  Credits  README.md  gameprojwsp.workspace
src/: CMakeLists.txt  CMakeSettings.json
src/engine/: CMakeLists.txt  com_game.cpp  com_game.h  com_gamestate.cpp  com_resmanager.cpp  com_resmanager.h  doxy-engine  engine.bmarks  engine.cbp  engine.depend  game_entity.cpp  game_map.cpp  gfx_display.cpp  gfx_display.h  gfx_particles.h  gfx_renderer.cpp  gfx_renderer.h  gfx_texture.cpp  gfx_tileset.h  in_inputmanager.cpp  script_lua.cpp  script_lua.h  snd_audio.cpp  ui_menu.cpp  ui_menu.h  ui_windows.h  util_timer.cpp
src/engine/documentation and calculations/: fileformats.lyx  graphics subsystem object overview.psd  lines  to-do list.odt  usersguide.lyx
src/engine/doxygen-docs/html/: annotated.html  classEngine_1_1Exception-members.html  classEngine_1_1FontManager.html  classEngine_1_1Game-members.html  classEngine_1_1GameState-members.html  classEngine_1_1Particle.html  classEngine_1_1Renderer-members.html  classEngine_1_1ResourceManager.html  classEngine_1_1Sprite-members.html  classEngine_1_1SpriteAnimation-members.html  classEngine_1_1TextureManager.html  classEngine_1_1Tileset.html  classEngine_1_1Timer.html  classEngine_1_1UIItem.html  classEngine_1_1UIMenu.html  classEngine_1_1Vector3-members.html  com__timer_8cpp.html  functions.html  functions_0x66.html  functions_0x67.html  functions_0x69.html  functions_0x6c.html  functions_0x6f.html  functions_enum.html  functions_eval.html  gfx__display_8h.html  gfx__fonts_8cpp.html  gfx__fonts_8h.html  gfx__sprite_8cpp.html  gfx__sprite_8h-source.html  gfx__tilemap_8h-source.html  gfx__tilemap_8h.html  hierarchy.html  in__keycodes_8h-source.html  namespaceboost_1_1filesystem.html  namespacemembers_enum.html  namespaces.html  ui__menu_8cpp.html  ui__windows_8h.html
src/engine/doxygen-docs/latex/: classEngine_1_1FatalException.tex  classEngine_1_1ResourceManager.tex  classEngine_1_1Sprite.tex  classEngine_1_1SpriteManager.eps  classEngine_1_1Texture.tex  classEngine_1_1Tilemap.tex  classEngine_1_1Tileset.tex  classEngine_1_1UIMenu.tex  classEngine_1_1UIWindow.tex  com__exceptions_8h.tex  com__gamestate_8cpp.tex  com__gamestate_8h.tex  com__resmanager_8cpp.tex  com__resmanager_8h.tex  gfx__texture_8cpp.tex  in__keycodes_8h.tex  namespaceboost_1_1filesystem.tex  structEngine_1_1ResourceManager_1_1Resource.tex  todo.tex  ui__menu_8h.tex
src/hiage/: CMakeLists.txt
src/hiage/documentation and calculations/: Naming Conventions.doc  buglist  engine layout.psd  mario-general-design.txt  texture_pos_calcs.txt
src/hiage/doxygen-docs/html/: classAudioManager-members.html  classAudioManager.html  classEngine_1_1Display.html  classEngine_1_1FatalException-members.html  classEngine_1_1Game.html  classEngine_1_1IOException-members.html  classEngine_1_1ParticleSystem-members.html  classEngine_1_1ParticleSystem.html  classEngine_1_1Renderer.html  classEngine_1_1Tileset-members.html  classEngine_1_1TilesetManager-members.html  classEngine_1_1Vector2-members.html  classEngine_1_1Vector2.html  classEngine_1_1Vector3.html  classTestklasse.html  com__game_8cpp.html  com__game_8h-source.html  com__typedefs_8h.html  com__vector3d_8cpp.html  com__vector3d_8h-source.html  examples.html  functions_0x6b.html  functions_0x6e.html  functions_0x74.html  functions_0x7e.html  functions_rela.html  gfx__fonts_8h-source.html  gfx__particles_8h.html  gfx__texture_8h-source.html  gfx__tilemap_8cpp.html  gfx__tileset_8cpp.html  globals_defs.html  in__inputmanager_8h-source.html  namespacemembers_type.html  namespacestd.html  structEngine_1_1ParticleCreateData.html  structEngine_1_1Tileset_1_1Tile-members.html  structEngine_1_1Tileset_1_1Tile.html  structEngine_1_1__Rect-members.html  structEngine_1_1__Rect.html  (+3 more)
src/hiage/doxygen-docs/latex/: classEngine_1_1Exception.eps  classEngine_1_1Exception.tex  classEngine_1_1FatalException.eps  classEngine_1_1IOException.eps  classEngine_1_1IOException.tex  classEngine_1_1InputManager.tex  classEngine_1_1Particle.tex  classEngine_1_1ResourceManager.eps  classEngine_1_1TextureManager.eps  classEngine_1_1TilesetManager.tex  classEngine_1_1UIItem.tex  classEngine_1_1Vector2.tex  classEngine_1_1Vector3.tex  com__game_8h.tex  com__timer_8h.tex  doxygen.sty  files.tex  gfx__display_8h.tex  gfx__fonts_8h.tex  gfx__particles_8h.tex  gfx__sprite_8cpp.tex  gfx__texture_8h.tex  gfx__tilemap_8h.tex  gfx__tileset_8cpp.tex  gfx__tileset_8h.tex  hierarchy.tex  loadResources-example.tex  namespaceEngine.tex  namespaces.tex  pages.tex  structEngine_1_1ParticleCreateData.tex  ui__menu_8cpp.tex  ui__windows_8cpp.tex  ui__windows_8h.tex
src/hiage/hiage/: lua-includes.h  sdl-includes.h
src/hiage/hiage/core/: audio.cpp  audio.h  boundingbox.hpp  boundingpolygon.cpp  boundingpolygon.hpp  collisions.cpp  collisions.hpp  componentmanager.cpp  componentmanager.hpp  components.cpp  components.hpp  debugrenderer.hpp  debugwriter.hpp  entity.cpp  entity.h  entity.hpp  entitymanager.cpp  entitymanager.hpp  events.cpp  events.hpp  game.cpp  game.h  game.hpp  gameconfig.hpp  gamestate.cpp  gamestate.hpp  inputmanager.cpp  inputmanager.h  inputmanager.hpp  map.cpp  map.h  map.hpp  objectfactory.cpp  objectfactory.h  quadtree.cpp  quadtree.hpp  resmanager.cpp  resmanager.h  resourcedescriptors.hpp  resourcemanager.cpp  (+8 more)
src/hiage/hiage/gfx/: display.cpp  display.h  fonts.cpp  fonts.h  (+16 more)
src/luabind/: CMakeLists.txt
src/mapeditor-gtk/: main.cpp  mainwindow.h  mapeditgame.cpp  mapeditgame.h  newmapwindow.cpp  objectpalette.cpp  objectpalette.h  resizedialog.h  tilepalette.cpp
src/mario/: CMakeLists.txt  components.cpp  components.hpp  events.hpp  gmon.out  main.cpp  mapeditor-gtk  mario.cbp  mario.layout  mariocomponents.cpp  mariocomponents.hpp  mariogame.cpp  mariogame.h  mariogame.hpp  mariostate.cpp  mariostate.h  mariostate.hpp  mariosystems.cpp  mariosystems.hpp  recent  systems.cpp  systems.hpp  ui-main.glade
src/scripts/: generate-object-strips.ps1
src/tilemapconverter/: CMakeLists.txt  main.cpp
(+381 files in other folders)
